# PrintTrace

./: .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SWIFT_INTEGRATION.md  install-deps.sh  outlinetool.pc.in  printtrace.pc.in
.claude/: settings.local.json
docs/: README.md  class-diagram.puml  component-diagram.puml  data-flow-diagram.puml  deployment-diagram.puml  design-patterns.puml  processing-flowchart.puml  processing-pipeline.puml  sequence-diagram.puml
include/: DXFWriter.hpp  ImageProcessor.hpp  OutlineToolAPI.h  PrintTraceAPI.h
src/: DXFWriter.cpp  ImageProcessor.cpp  OutlineToolAPI.cpp  PrintTraceAPI.cpp  main.cpp  outlinetool_cli.cpp  printtrace_cli.cpp
swift-example/: BridgingHeader.h  ContentView.swift  OutlineToolWrapper.swift  Package.swift  README.md  TESTING-COMPLETE.md  TESTING.md  simple-test.swift
swift-example/.build/: build.db  debug.yaml
swift-example/.build/arm64-apple-macosx/debug/: description.json
swift-example/.build/arm64-apple-macosx/debug/ModuleCache/1KO1CH4JSCSE0/: AvailabilityMacros-1R8AB8N4VAFAG.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  COutlineTool-31O335QL156V.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  DarwinFoundation-1W8U2OOUAA1YQ.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  MachO-20RPYVQSX341K.pcm  ObjectiveC-1G8H182PQX3QE.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  TargetConditionals-1C41IB3E7JLP3.pcm  XPC-T0ZXCAST7PE3.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_iso646-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _Builtin_tgmath-19KE09ZDXQ6Q3.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm  __wctype-47SZ9A199RUD.pcm  _assert-47SZ9A199RUD.pcm  _complex-47SZ9A199RUD.pcm  _ctype-47SZ9A199RUD.pcm  _errno-47SZ9A199RUD.pcm  _fenv-47SZ9A199RUD.pcm  _float-47SZ9A199RUD.pcm  _inttypes-47SZ9A199RUD.pcm  _limits-47SZ9A199RUD.pcm  _locale-47SZ9A199RUD.pcm  _math-47SZ9A199RUD.pcm  _setjmp-47SZ9A199RUD.pcm  _signal-47SZ9A199RUD.pcm  _stdint-47SZ9A199RUD.pcm  _stdio-47SZ9A199RUD.pcm  _stdlib-47SZ9A199RUD.pcm  (+32 more)
swift-example/.build/arm64-apple-macosx/debug/Modules/: OutlineToolDemo.swiftdoc  OutlineToolDemo.swiftmodule  OutlineToolDemo.swiftsourceinfo  OutlineToolSwift.swiftdoc  OutlineToolSwift.swiftmodule  OutlineToolSwift.swiftsourceinfo
swift-example/.build/arm64-apple-macosx/debug/OutlineToolDemo.build/: OutlineToolDemo.emit-module.d  main.d  main.swiftdeps  master.priors  output-file-map.json  sources
swift-example/.build/arm64-apple-macosx/debug/OutlineToolDemo.product/: Objects.LinkFileList
swift-example/.build/arm64-apple-macosx/debug/OutlineToolSwift.build/: OutlineToolSwift-Swift.h  OutlineToolSwift.emit-module.d  OutlineToolWrapper.d  OutlineToolWrapper.swiftdeps  master.priors  module.modulemap  output-file-map.json  sources
swift-example/.build/arm64-apple-macosx/debug/OutlineToolSwiftPackageTests.build/: module.modulemap  output-file-map.json
swift-example/.build/arm64-apple-macosx/debug/OutlineToolSwiftTests.build/: output-file-map.json
swift-example/.build/arm64-apple-macosx/debug/index/store/v5/records/CD/: OutlineToolWrapper.swift-2P1G7KVB42BCD
swift-example/.build/arm64-apple-macosx/debug/index/store/v5/records/LS/: OutlineToolWrapper.swift-2PGASMIFN3SLS
swift-example/.build/arm64-apple-macosx/debug/index/store/v5/records/TO/: main.swift-ESUCLWABGBTO
swift-example/.build/arm64-apple-macosx/debug/index/store/v5/records/XP/: OutlineToolAPI.h-VE5DXQS5TPXP
swift-example/.build/arm64-apple-macosx/debug/index/store/v5/units/: AvailabilityMacros-1R8AB8N4VAFAG.pcm-3SI5IPJAR5FOU  CFNetwork-1PNPO1ORVQZLS.pcm-30EBF6R9G1R0H  COutlineTool-31O335QL156V.pcm-2K2Q127FBZBEH  CoreFoundation-16SA8WK3L6MQN.pcm-1ARJ97VE8TN2Z  CoreServices-39NCTJOEW7PQ2.pcm-2518C5GWBKC2Q  Darwin-1FXX23EKWOBA9.pcm-266GSTR4GPBRK  DarwinFoundation-1W8U2OOUAA1YQ.pcm-9OMPBUDK7AES  DiskArbitration-3LBJF5I58QD8.pcm-3J85LBKXUS3Z  Dispatch-R76HXUP80TVL.pcm-9K30NJY7U3BB  Foundation-24LYWIP48SHNP.pcm-2PAYXK0AY09RE  IOKit-1IAL9NTK1TABA.pcm-39B8DUCVNH1S7  MachO-20RPYVQSX341K.pcm-1OUMI3EL305JH  ObjectiveC-1G8H182PQX3QE.pcm-1DGYISIP4K0N5  OutlineToolWrapper.swift.o-26K0CN88WI0EY  Security-3QCVXOV25KK54.pcm-3KJF258TGX1SV  TargetConditionals-1C41IB3E7JLP3.pcm-WJJYHT2D2WAN  XPC-T0ZXCAST7PE3.pcm-3NP065UX7MWCO  _Builtin_float-19KE09ZDXQ6Q3.pcm-1D77P7SV1RGYT  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm-3L92AO5YRQFFG  _Builtin_iso646-19KE09ZDXQ6Q3.pcm-1XDJXX6NKCZBD  _Builtin_limits-19KE09ZDXQ6Q3.pcm-3V8HS8UIDUJ1U  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm-1CHBLU2ASYORA  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm-1YDO8XR902BTK  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm-1RSRBUSWWUV8H  _Builtin_stddef-19KE09ZDXQ6Q3.pcm-37TAORZULP475  _Builtin_stdint-19KE09ZDXQ6Q3.pcm-OUVEGNG9EYAF  _Builtin_tgmath-19KE09ZDXQ6Q3.pcm-31Z72CXNM0XC8  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm-2GDDJG0UX5N4Q  __wctype-47SZ9A199RUD.pcm-1IF0TUQL2MU7J  _assert-47SZ9A199RUD.pcm-1C10WOY3L7KW0  _complex-47SZ9A199RUD.pcm-S0PFFPGTTMVH  _ctype-47SZ9A199RUD.pcm-2AARW8PSQUN2A  _errno-47SZ9A199RUD.pcm-3U8JRQ8X3ATWR  _fenv-47SZ9A199RUD.pcm-9FXFY1P42OYA  _float-47SZ9A199RUD.pcm-2FDNYQQTCB3NT  _inttypes-47SZ9A199RUD.pcm-9BWUDPANVR9R  _limits-47SZ9A199RUD.pcm-3M231C0ZK95IC  _locale-47SZ9A199RUD.pcm-QBVKRZL26IYR  _math-47SZ9A199RUD.pcm-2OQP1LNKENPYH  _setjmp-47SZ9A199RUD.pcm-3PAGO4UM95X8Q  (+56 more)
swift-example/Sources/COutlineTool/: module.modulemap
swift-example/Sources/OutlineToolDemo/: main.swift
swift-example/Sources/OutlineToolSwift/: OutlineToolWrapper.swift
swift-example/Tests/OutlineToolSwiftTests/: OutlineToolSwiftTests.swift
